<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">
    <net.kdt.pojavlaunch.prefs.BackButtonPreference/>
    <PreferenceCategory android:title="@string/preference_category_experimental_settings">

        <SwitchPreferenceCompat
            android:key="dump_shaders"
            android:title="@string/preference_shader_dump_title"
            android:summary="@string/preference_shader_dump_description"
            android:icon="@drawable/ic_mat_dump_shaders"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="bigCoreAffinity"
            android:icon="@drawable/ic_mat_core_affinity"
            android:title="@string/preference_force_big_core_title"
            android:summary="@string/preference_force_big_core_desc" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="freedrenoSysmem"
            android:icon="@drawable/ic_mat_sysmem"
            android:title="@string/preference_sysmem_title"
            android:summary="@string/preference_sysmem_summary"
            />
        <SwitchPreference
            android:defaultValue="false"
            android:key="alsoftForceOpenSL"
            android:icon="@drawable/ic_px_dynamic"
            android:title="@string/preference_alsoft_opensl_title"
            android:summary="@string/preference_alsoft_opensl_summary"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_ui_category_title">

        <Preference
            android:key="ui_remove"
            android:title="@string/preference_ui_remove_title"
            android:summary="@string/preference_ui_remove_summary" />

        <Preference
            android:key="ui_default"
            android:title="@string/preference_ui_default_title"
            android:summary="@string/preference_ui_default_summary" />

    </PreferenceCategory>
</PreferenceScreen>