<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_abg_animated"
    android:paddingHorizontal="@dimen/fragment_padding_medium">

    <LinearLayout
        android:id="@+id/auth_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_22sdp"
        android:background="@drawable/bg_abg_animated_card">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add account"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Choose how you want to sign in"
            android:textColor="#AEBBDD"
            android:textSize="13sp" />

        <com.kdt.mcgui.MineButton
            android:id="@+id/button_microsoft_authentication"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:text="@string/auth_select_microsoft"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_12ssp" />

        <com.kdt.mcgui.MineButton
            android:id="@+id/button_elyby_authentication"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/auth_elyby_button"
            android:text="@string/auth_select_elyby"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_12ssp" />

        <com.kdt.mcgui.MineButton
            android:id="@+id/button_local_authentication"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/auth_local_button"
            android:text="@string/auth_select_local"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</FrameLayout>
