<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_menu_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_abg_animated"
    android:paddingTop="12dp">

    <ScrollView
        android:id="@+id/animated_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/mc_version_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/animated_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="18dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/animated_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ABG XS"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="sans" />

            <TextView
                android:id="@+id/animated_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Minecraft Launcher"
                android:textColor="#AEBBDD"
                android:textSize="14sp" />

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/social_media_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/bg_abg_animated_button"
                android:drawableStart="@drawable/ic_social_media"
                android:drawablePadding="14dp"
                android:padding="16dp"
                android:text="@string/mcl_button_social_media"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/custom_control_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_abg_animated_button"
                android:drawableStart="@drawable/ic_px_gamepad"
                android:drawablePadding="14dp"
                android:padding="16dp"
                android:text="@string/mcl_option_customcontrol"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/install_jar_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_abg_animated_button"
                android:drawableStart="@drawable/ic_px_java_run"
                android:drawablePadding="14dp"
                android:padding="16dp"
                android:text="@string/main_install_jar_file"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/share_logs_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_abg_animated_button"
                android:drawableStart="@drawable/ic_px_sharelog"
                android:drawablePadding="14dp"
                android:padding="16dp"
                android:text="@string/main_share_logs"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

            <com.kdt.mcgui.LauncherMenuButton
                android:id="@+id/open_files_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_abg_animated_button"
                android:drawableStart="@drawable/ic_px_folder"
                android:drawablePadding="14dp"
                android:padding="16dp"
                android:text="@string/mcl_button_open_directory"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

    <com.kdt.mcgui.mcVersionSpinner
        android:id="@+id/mc_version_spinner"
        android:layout_width="0dp"
        android:layout_height="@dimen/_52sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_64sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/edit_profile_button"
        android:layout_width="@dimen/_52sdp"
        android:layout_height="@dimen/_52sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_px_edit"
        app:layout_constraintBottom_toBottomOf="@id/mc_version_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/mc_version_spinner" />

    <com.kdt.mcgui.MineButton
        android:id="@+id/play_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/_62sdp"
        android:layout_marginStart="@dimen/_17sdp"
        android:layout_marginEnd="@dimen/_17sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/bg_abg_animated_play"
        android:text="@string/main_play"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
